# deepagents

./: .release-please-manifest.json
libs/acp/: CHANGELOG.md  pyproject.toml
libs/acp/deepagents_acp/: _version.py
libs/code/: CHANGELOG.md  pyproject.toml
libs/code/deepagents_code/: _version.py
libs/deepagents/: CHANGELOG.md  pyproject.toml
libs/deepagents/deepagents/: _version.py
libs/deepagents/deepagents/profiles/: _builtin_profiles.py
libs/deepagents/deepagents/profiles/harness/: _glm_5p2.py
libs/evals/deepagents_harbor/langgraph_project/: langgraph_agent.py
libs/partners/quickjs/: CHANGELOG.md  pyproject.toml
